--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.0",
+    "minimist": "^1.2.5",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {}
