--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.13",
     "minimist": "^1.2.5",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {}
