--- a/package.json
+++ b/package.json
@@ -10,21 +10,17 @@
   "author": "alifnaufalyasin",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^4.0.0",
     "jquery": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.13",
-    "minimist": "^1.2.5",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.2",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {}
 }
