--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "knex": "^0.20.13",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {}
